--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -15,7 +15,7 @@
         Welcome to <b>ICA</b>
       </h2>
       <p>
-        The <b>ionic conference app</b> is a practical preview of the ionic framework in action, and a demonstration of proper code use.
+        O aplicativo <b>Troca Disco</b> é uma maneira prática e rápida de trocar os discos que você não ouve pelos seus albuns favoritos.
       </p>
     </ion-slide>
 
