--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -17,13 +17,13 @@
     <img src="assets/img/ionic-logo-white.svg" alt="ionic logo">
   </div>
   <div padding class="about-info">
-    <h4>Ionic Conference</h4>
+    <h4>Troca Disco</h4>
 
     <ion-list no-lines>
       <ion-item>
         <ion-icon name="calendar" item-start></ion-icon>
         <ion-label>Date</ion-label>
-        <ion-datetime displayFormat="MMM DD, YYYY" max="2056" [(ngModel)]="conferenceDate"></ion-datetime>
+        <ion-datetime displayFormat="MMM DD, YYYY" max="2056" [(ngModel)]="postDate"></ion-datetime>
       </ion-item>
 
       <ion-item>
@@ -39,13 +39,7 @@
     </ion-list>
 
     <p>
-      The Ionic Conference is a one-day conference featuring talks from the
-      Ionic team. It is focused on Ionic applications being built with
-      Ionic 2. This includes migrating apps from Ionic 1 to Ionic 2,
-      Angular concepts, Webpack, Sass, and many other technologies used
-      in Ionic 2. Tickets are completely sold out, and we’re expecting
-      more than 1000 developers – making this the largest Ionic
-      conference ever!
+      Troca Disco é uma plataforma criada para facilitar a troca e venda de discos de vinil.
     </p>
   </div>
 </ion-content>
