--- a/src/pages/discover/discover.html
+++ b/src/pages/discover/discover.html
@@ -34,44 +34,30 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
 
-  <ion-list #DiscoverList [hidden]="shownSessions === 0">
+  <ion-list #DiscoverList [hidden]="shownDiscs === 0">
+    <ion-item-sliding *ngFor="let disc of discs" #slidingItem [hidden]="disc.hide">
 
-    <ion-item-group *ngFor="let group of groups" [hidden]="group.hide">
+      <button ion-item (click)="goToDiscDetail(disc)">
+        <h3>{{disc.album.albumName}}</h3>
+        <p>
+          {{disc.album.artist.name}} 
+        </p>
+      </button>
 
-      <ion-item-divider sticky>
-        <ion-label>
-          {{group.time}}
-        </ion-label>
-      </ion-item-divider>
-
-      <ion-item-sliding *ngFor="let session of group.sessions" #slidingItem [attr.track]="session.tracks[0] | lowercase" [hidden]="session.hide">
-
-        <button ion-item (click)="goToSessionDetail(session)">
-          <h3>{{session.name}}</h3>
-          <p>
-            {{session.timeStart}} &mdash;
-            {{session.timeEnd}}:
-            {{session.location}}
-          </p>
+      <ion-item-options>
+        <button ion-button color="favorite" (click)="addFavorite(slidingItem, disc)" *ngIf="segment === 'all'">
+          Favorite
         </button>
+        <button ion-button color="danger" (click)="removeFavorite(slidingItem, disc, 'Remove Favorite')" *ngIf="segment === 'favorites'">
+          Remove
+        </button>
+      </ion-item-options>
 
-        <ion-item-options>
-          <button ion-button color="favorite" (click)="addFavorite(slidingItem, session)" *ngIf="segment === 'all'">
-            Favorite
-          </button>
-          <button ion-button color="danger" (click)="removeFavorite(slidingItem, session, 'Remove Favorite')" *ngIf="segment === 'favorites'">
-            Remove
-          </button>
-        </ion-item-options>
-
-      </ion-item-sliding>
-
-    </ion-item-group>
-
+    </ion-item-sliding>
   </ion-list>
 
-  <ion-list-header [hidden]="shownSessions > 0">
-      No Sessions Found
+  <ion-list-header [hidden]="shownDiscs > 0">
+      Nenhum novo disco foi encontrado próximo a você
   </ion-list-header>
 
   <ion-fab bottom right #fab>
